--- a/arch/arm/configs/mericon_defconfig
+++ b/arch/arm/configs/mericon_defconfig
@@ -37,7 +37,7 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="/home/mericon/projects/cm/prebuilt/linux-x86/toolchain/arm-eabi-4.4.3/bin/arm-eabi-"
-CONFIG_LOCALVERSION="-307005"
+CONFIG_LOCALVERSION="-Mericon"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
